# path-tracer

./: .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: .clang-format  ptracer.h
src/math/: bbox.cpp  bbox.h  bounds.cpp  bounds.h  frame.cpp  frame.h  math.h  matrix.h  quat.cpp  quat.h  ray.cpp  ray.h  transform.cpp  transform.h  vector.h
src/util/: check.h  log.cpp  log.h
